test/expected/explain_v.out
explain void x
        ^
9: error: variable of "void"; did you mean "void*"?
